--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-gitinfo": "^0.1.7",
     "load-grunt-tasks": "^1.0.0"
   }
