--- a/package.json
+++ b/package.json
@@ -2,15 +2,8 @@
   "name": "JSAV",
   "version": "0.7.0",
   "description": "JSAV - The JavaScript Algorithm Visualization Library",
-  "directories": {
-    "example": "Example usages of JSAV",
-    "test": "Unittests",
-    "src": "The JS sourcefiles"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vkaravir/JSAV.git"
-  },
+  "homepage": "http://jsav.io/",
+  "license": "MIT",
   "author": "Ville Karavirta <ville@villekaravirta.com>",
   "contributors": [
     {
@@ -21,17 +14,28 @@
       "email": "ville@villekaravirta.com"
     }
   ],
-  "license": "MIT",
+  "directories": {
+    "example": "Example usages of JSAV",
+    "test": "Unittests",
+    "src": "The JS sourcefiles"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vkaravir/JSAV.git"
+  },
   "bugs": {
     "url": "https://github.com/vkaravir/JSAV/issues"
   },
-  "homepage": "http://jsav.io/",
+  "scripts": {
+    "test": "grunt test"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-qunit": "^0.5.2",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
