Added KeyValue pair data structure and udpated uni tests, Grunt and examples. Also added default styling.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     {
       "name": "Ville Karavirta",
       "email": "ville@villekaravirta.com"
+    },
+    {
+      "name": "Matthew Micallef",
+      "email": "mattmicallef@outlook.com"
     }
   ],
   "directories": {
